# paper-rss-bot

./: Makefile  bot.py  pyproject.toml  test.py  user_subscriptions.json  user_topics.json
.github/workflows/: ci.yml  deploy.yml
rss_processors/: feed_processor.py
